IDENTITY-5790 fixing Security question update works for empty answers

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/fragments/security-questions/security-questions.hbs
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary add-margin-bottom-3x" onclick="updateQuestion()">
+        <button type="button" class="btn btn-primary add-margin-bottom-3x" onclick="updateQuestion()">
             {{i18n "security.question.label.update"}}</button>
         <input type="button" class="btn btn-default add-margin-bottom-3x"
                value='{{i18n "security.question.label.cancel"}}' onclick="goBack()">
