--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/index.hbs
@@ -1,1 +1,34 @@
+{{secured}}
+{{layout "privilege"}}
+{{favicon "images/favicon.png" type="image/png"}}
+{{title "Home | " @config.appName}}
+{{css "css/user-portal.css"}}
 
+{{#fillZone "breadcrumbs"}}
+    <div class="breadcrumb-wrapper">
+        <ol class="breadcrumb">
+            <li>
+                <a href="/admin-portal"><i class="icon fw fw-home"></i>
+                <span class="hidden-xs">{{i18n "overview.header"}}</span></a>
+            </li>
+        </ol>
+    </div>
+{{/fillZone}}
+
+{{#fillZone "content"}}
+    <div class="body-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="page-header">
+                        <h1>{{i18n "overview.header"}}</h1>
+                    </div>
+                    <div class="message message-info">
+                        <h4><i class="icon fw fw-info"></i>{{i18n "overview.users"}}</h4>
+                        <p>{{i18n "overview.users"}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+{{/fillZone}}
