--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/login.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/login.hbs
@@ -1,7 +1,7 @@
 {{layout "unprivilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
 {{title "Sign in | " @config.appName}}
-{{css "css/user-portal.css"}}
+{{css "css/admin-portal.css"}}
 {{js "js/script.js"}}
 {{js "js/left-navigation.js"}}
 {{js "js/login.js"}}
