Add landing page with navigation menus

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/index.hbs
@@ -9,7 +9,7 @@
         <ol class="breadcrumb">
             <li>
                 <a href="/admin-portal"><i class="icon fw fw-home"></i>
-                <span class="hidden-xs">{{i18n "overview.header"}}</span></a>
+                <span class="hidden-xs">{{i18n "applications.breadcrumb"}}</span></a>
             </li>
         </ol>
     </div>
@@ -21,11 +21,11 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="page-header">
-                        <h1>{{i18n "overview.header"}}</h1>
+                        <h1>{{i18n "applications.header"}}</h1>
                     </div>
                     <div class="message message-info">
-                        <h4><i class="icon fw fw-info"></i>{{i18n "overview.users"}}</h4>
-                        <p>{{i18n "overview.users"}}</p>
+                        <h4><i class="icon fw fw-info"></i>{{i18n "no-applications.header"}}</h4>
+                        <p>{{i18n "no-applications.body"}}</p>
                     </div>
                 </div>
             </div>
