--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/layouts/privilege.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/layouts/privilege.hbs
@@ -43,37 +43,7 @@
 
 <div class="page-content-wrapper">
     <!-- Add left side navigation menu -->
-    <div class="sidebar-wrapper sidebar-nav" data-side="left" data-width="260" data-container=".page-content-wrapper"
-         data-container-divide="true" data-fixed-offset-top="0" data-spy="affix" data-offset-top="80"
-         id="sidebar-theme">
-        <div class="nano ">
-            <div class="nano-content ">
-                <ul class="nav nav-pills nav-stacked pages">
-                    {{#menu "main"}}
-                        <li>
-                            <a href="{{@contextPath}}{{link}}">
-                                {{#if icon}}<i class="{{icon}}"></i>{{/if}}{{text}}
-                            </a>
-                        </li>
-                    {{/menu}}
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="navbar-wrapper">
-        <nav class="navbar navbar-default navbar-doc" data-spy="affix" data-offset-top="80" data-offset-bottom="40">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-menu-toggle" data-toggle="sidebar" data-target="#sidebar-theme"
-                       aria-expanded="false" rel="leftmenu-sidebar">
-                    <span class="icon fw-stack">
-                        <i class="fw fw-menu fw-stack-1x toggle-icon-left-arrow"></i>
-                    </span>
-                    </a>
-                </div>
-            </div>
-        </nav>
-    </div>
+    {{fragment "navigation-menu"}}
     <div class="container-fluid">
         {{defineZone "content"}}
     </div>
