user list initial commit

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/navigation-menu/navigation-menu.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/navigation-menu/navigation-menu.hbs
@@ -26,6 +26,7 @@
                     </span>
                 </a>
             </div>
+            {{defineZone "usernavbar"}}
         </div>
     </nav>
 </div>
