Admin Forced Password Reset UI improvements

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/recovery/forced-password-reset.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/recovery/forced-password-reset.hbs
@@ -1,8 +1,9 @@
 {{secured}}
 {{layout "privilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
-{{title "Add User | " @config.appName}}
+{{title "Reset Password | " @config.appName}}
 {{css "css/admin-portal.css"}}
+{{js "js/forced-password-reset.js"}}
 
 {{#fillZone "content"}}
     <div class="body-wrapper">
@@ -26,21 +27,18 @@
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
                     <div class="well">
                         <label class="control-label" for="newPassword">{{i18n "recovery.reset.password.new"}}</label>
-
-                        <div class="input-group">
-                            <input class="form-control width100">
+                        <input class="form-control" name="newPassword" id="newPassword" type="text">
          <span class="input-group-btn">
-            <input class="btn btn-default add-margin-bottom-3x" type="submit" name="generatePassword"
+            <input class="btn btn-default add-margin-bottom-3x" name="generatePassword" id="generatePassword"
                    value="Re-generate Password"/>
          </span>
-                        </div>
-                    </div>
-                    <div>
-                        <input class="btn btn-primary" type="submit" name="reset" value="Reset"/>
                     </div>
                 </div>
             </div>
-
-        </form>
+            <div>
+                <input class="btn btn-primary" type="submit" name="reset" value="Reset"/>
+            </div>
+    </div>
+    </form>
     </div>
 {{/fillZone}}
