--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/recovery/forced-password-reset.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/recovery/forced-password-reset.hbs
@@ -16,7 +16,8 @@
                 <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
                     <label for="verificationSelector" class="control-label">{{i18n "recovery.reset.selectMethod"}}
                     </label>
-                    <select class="form-control" id="verificationSelector">
+                    <select class="form-control" id="verificationSelector"
+                            data-primary={{i18n "recovery.reset.select.with.reset.link"}}>
                         <option>{{i18n "recovery.reset.select.with.offline.OTP"}}</option>
                         <option>{{i18n "recovery.reset.select.with.email.OTP"}}</option>
                         <option>{{i18n "recovery.reset.select.with.reset.link"}}</option>
@@ -26,19 +27,28 @@
             <div class="form-group password_strength_meter ">
                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
                     <div class="well">
-                        <label class="control-label" for="newPassword">{{i18n "recovery.reset.password.new"}}</label>
-                        <input class="form-control" name="newPassword" id="newPassword" type="text">
-         <span class="input-group-btn">
-            <input class="btn btn-default add-margin-bottom-3x" name="generatePassword" id="generatePassword"
-                   value="Re-generate Password"/>
-         </span>
+                        <div class="form-group">
+                            <div class="col-md-12">
+                                <label class="control-label"
+                                       for="newPassword">{{i18n "recovery.reset.password.new"}}</label>
+                            </div>
+                            <div class="col-md-6 pw">
+                                <input class="form-control" name="newPassword" id="newPassword"
+                                       data-schemaformat="password" disabled="disabled" type="hidden">
+                            </div>
+                            <div class="col-md-6">
+                                <input class="btn btn-default" name="generatePassword" id="generatePassword"
+                                       value="Generate"/>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
             <div>
-                <input class="btn btn-primary" type="submit" name="reset" value="Reset"/>
+                <input class="btn btn-primary" type="submit" name="reset" id="reset" value="Reset" disabled/>
             </div>
-    </div>
-    </form>
+
+        </form>
     </div>
 {{/fillZone}}
