--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/list.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/users/list.hbs
@@ -34,7 +34,7 @@
         <div class="page-header">
             <h1>{{i18n "overview.users"}}</h1>
         </div>
-        <form class="form-horizontal" role="form" method="post">
+        <form class="form-horizontal" method="post" id="filterListForm" action="?list#list">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
                 <div class="row">
                     <table class="table table-striped table-hover table-responsive list-table display responsive nowrap data-table" id="users-sample">
@@ -46,6 +46,39 @@
                             <th>Groups</th>
                             <th>Roles</th>
                             <th class="no-sort"></th>
+                        </tr>
+                        <tr class="filter-row-custom">
+                            <th data-for="Type"></th>
+                            <th data-for="Domain" class="text-filter"></th>
+                            <th class="select-filter">
+                                <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
+                                    Filter By Claim
+                                    <select class="form-control" id="claimSelector" onChange="getClaimUri()">
+                                        <option value=""></option>
+                                        {{#each claimProfile}}
+                                            <option name="claim-uri-{{claimURI}}" id="claim-uri-{{claimURI}}" value="{{claimURI}}">{{displayName}}</option>
+                                        {{/each}}
+                                    </select>
+                                    <input class="form-control" type="text" id="claim-filter" name="claim-filter" placeholder="Value"/>
+                                </div>
+                            </th>
+                            <th data-for="Office" class="select-filter"></th>
+                            <th data-for="Age" class="select-filter"></th>
+                            <th>
+                                <select class="form-control" id="domainSelector" onChange="getDomain()">
+                                    {{#each domains}}
+                                        <option value={{this}}>{{this}}</option>
+                                    {{/each}}
+                                </select>
+                            </th>
+                            <input type="hidden" name="action" value="filter-list">
+                            <input type="hidden" id="claim-uri" name="claim-uri" value="">
+                            <input type="hidden" id="domain-name" name="domain-name" value="">
+                            <th class="text-right content-fill text-left-on-grid-view no-wrap">
+                                <button class="btn btn-primary " type="submit">
+                                    <i class="fw fw fw-search search-icon add-margin-right-1x"></i>
+                                </button>
+                            </th>
                         </tr>
                         <tr class="bulk-action-row">
                             <th colspan="8">
