Added update profile

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/profile-details/profile-details.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/profile-details/profile-details.hbs
@@ -1,6 +1,30 @@
 {{fragment "org.wso2.carbon.uuf.common.foundation.ui.jquery-validation"}}
-{{js "js/profile.js"}}
-
+{{js "js/profile-details.js"}}
+{{#if success}}
+    {{#if message}}
+        <div class="alert alert-success" role="alert">
+            <i class="icon fw fw-success"></i><strong>{{i18n "profile.success"}}</strong>
+            {{message}}
+            <button type="button" class="close" aria-label="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    <i class="fw fw-cancel"></i>
+                </span>
+            </button>
+        </div>
+    {{/if}}
+{{else}}
+    {{#if message}}
+        <div class="alert alert-danger" role="alert">
+            <i class="icon fw fw-error"></i><strong>{{i18n "profile.failure"}}</strong>
+            {{message}}
+            <button type="button" class="close" aria-label="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    <i class="fw fw-cancel"></i>
+                </span>
+            </button>
+        </div>
+    {{/if}}
+{{/if}}
 <form method="post" class="form-horizontal profile-form" action="?{{profile}}#{{profile}}" id="{{profile}}-form">
     {{#each uiEntries}}
         <div class="form-group">
@@ -12,5 +36,5 @@
             </div>
         </div>
     {{/each}}
-    <input class="btn btn-primary add-margin-bottom-3x" type="submit" value="Update" id="update-profile"/>
+    <input id="btn-{{profile}}" class="btn btn-primary add-margin-bottom-3x" type="submit" value="Update" />
 </form>
