--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/public/css/admin-portal.css
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/public/css/admin-portal.css
@@ -555,3 +555,7 @@ label.error {
 .dark .recover-option-container hr, .recover-question-container hr{
     border: 1px solid #2E2A2B;
 }
+
+.box {
+    display: none;
+}
