--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/index.hbs
@@ -1,12 +1,42 @@
 {{secured}}
 {{layout "privilege"}}
 {{favicon "images/favicon.png" type="image/png"}}
-{{title "Users | " @config.appName}}
+{{title "Groups | " @config.appName}}
 {{css "css/admin-portal.css"}}
 
 {{#fillZone "content"}}
     <div class="body-wrapper">
         <div class="container-fluid">
+
+
+            <!-- navbar -->
+            <div class="navbar-wrapper">
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <div id="navbar" class="collapse navbar-collapse">
+                            <ul class="nav navbar-nav">
+                                <li>
+                                    <a href="#">
+                                        <i class="fw fw-left fw-helper fw-helper-circle-outline"></i>
+                                        {{i18n "go.back"}}
+                                    </a>
+                                </li>
+                                <li class="active">
+                                    <a href="add">
+                                <span class="icon fw-stack">
+                                    <i class="fw fw-add fw-helper fw-helper-circle-outline"></i>
+                                </span>
+                                        {{i18n "group.add.header"}}
+                                    </a>
+                                </li>
+                            </ul>
+                        </div><!--/.nav-collapse -->
+                    </div>
+                </nav>
+            </div>
+            <!-- /navbar -->
+
+
             <div class="row">
                 <div class="col-md-12">
                     <div class="page-header">
